--- a/Videos/playlists.html
+++ b/Videos/playlists.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../video.css" />
+    <link rel="stylesheet" href="../playlists.css" />
     <link rel="icon" href="../Images/Website Icon.png" />
     <script src="../video.js"></script>
     <title>VukeFN | Videos</title>
@@ -60,7 +60,69 @@
     </header>
 
     <!-- ========== MAIN ========== -->
-    <main id="main">under construction</main>
+    <main id="main">
+        <section>
+            <h2>BHE 1v1 MAP</h2>
+            <div class="videos-grid">
+                <div class="video">
+                    <a href="#">
+                        <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 7).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                    </a>
+                    <a href="#">
+                        <p class="video-title">How to Make BHE 1v1 Map (Part 7)</p>
+                    </a>
+                </div>
+                <div class="video">
+                    <a href="#">
+                        <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 6).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                    </a>
+                    <a href="#">
+                        <p class="video-title">How to Make BHE 1v1 Map (Part 6)</p>
+                    </a>
+                </div>
+                <div class="video">
+                    <a href="#">
+                        <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 5).png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                    </a>
+                    <a href="#">
+                        <p class="video-title">How to Make BHE 1v1 Map (Part 5)</p>
+                    </a>
+                </div>
+                <div class="video">
+                    <a href="#">
+                        <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 4).png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                    </a>
+                    <a href="#">
+                        <p class="video-title">How to Make BHE 1v1 Map (Part 4)</p>
+                    </a>
+                </div>
+                <div class="video">
+                    <a href="#">
+                        <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 3).png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                    </a>
+                    <a href="#">
+                        <p class="video-title">How to Make BHE 1v1 Map (Part 3)</p>
+                    </a>
+                </div>
+                <div class="video">
+                    <a href="#">
+                        <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 2).png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                    </a>
+                    <a href="#">
+                        <p class="video-title">How to Make BHE 1v1 Map (Part 2)</p>
+                    </a>
+                </div>
+                <div class="video">
+                    <a href="#">
+                        <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 1).png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                    </a>
+                    <a href="#">
+                        <p class="video-title">How to Make BHE 1v1 Map (Part 1)</p>
+                    </a>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <!-- ========== SCRIPTS ========== -->
 
