Made loading page and intro

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 </head>
 
 <body id="body">
+    <div id="preloader">loading...</div>
+    <div id="website-intro">
+        <img src="./Images/Website Logo.png" id="website-intro-logo" alt="website's logo" />
+    </div>
     <div id="lower-opacity" class="lower-opacity"></div>
     <header>
         <nav class="nav">
@@ -157,7 +161,7 @@
 
     <main id="main">
         <section class="grid-item">
-            <img src="" alt="welcome image" />
+            <img src="./Images/welcome image.png" class="welcome" alt="welcome image" />
         </section>
         <section class="grid-item">
             <h1>GETTING STARTED!</h1>
