--- a/Videos/videos.html
+++ b/Videos/videos.html
@@ -12,6 +12,7 @@
 </head>
 
 <body id="body">
+    <div id="preloader">loading...</div>
     <header>
         <nav class="nav">
             <ion-icon name="menu-outline" class="sidebar-button" onclick="openSideBar()"></ion-icon>
@@ -153,7 +154,7 @@
             </div>
         </nav>
     </header>
-    <div id="lower-opacity" class="lower-opacity"></div>
+    <div id="lower-opacity" class="lower-opacity" onclick="closeSideBar()"></div>
 
     <main id="main">
         <section>
