--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="website-intro">
         <img src="./Images/Website Logo.png" id="website-intro-logo" alt="website's logo" />
     </div>
-    <div id="lower-opacity" class="lower-opacity"></div>
+    <div id="lower-opacity" class="lower-opacity" onclick="closeSideBar()"></div>
     <header>
         <nav class="nav">
             <ion-icon name="menu-outline" class="sidebar-button" onclick="openSideBar()"></ion-icon>
