--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
             <a href="https://VukeFN.github.io/Videos/videos.html">VIDEOS</a>
         </section>
         <section class="grid-item">
-            <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 3).png" alt="Thumbnail" class="video-thumbnail" width="540" />
+            <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 3).png" alt="Thumbnail" class="video-thumbnail" />
         </section>
         <section class="grid-item">
-            <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 3).png" alt="Thumbnail" class="video-thumbnail" width="540" />
+            <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 3).png" alt="Thumbnail" class="video-thumbnail" />
         </section>
         <section class="grid-item">
             <h1>JUST ONE CLICK!</h1>
@@ -183,7 +183,7 @@
             <p>Easily check the solution for your problem.</p>
         </section>
         <section class="grid-item">
-            <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 3).png" alt="Thumbnail" class="video-thumbnail" width="540" />
+            <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 3).png" alt="Thumbnail" class="video-thumbnail" />
         </section>
     </main>
 
