implemented lazy loading (very cool)

--- a/Videos/videos.html
+++ b/Videos/videos.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../style.css" />
     <link rel="icon" href="../Images/Website Icon.png" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
     <script src="../main.js"></script>
     <title>VukeFN | Videos</title>
 </head>
@@ -163,16 +164,16 @@
             </div>
             <div class="videos-grid">
                 <div class="video">
-                    <a href="https://VukeFN.github.io/Videos/Clix-Team-Selector.html">
-                        <img src="../Thumbnails/Clix Team Selector 2.png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                    <a href="https://VukeFN.github.io/Videos/Clix_Team_Selector.html">
+                        <img loading="lazy" src="../Thumbnails/Clix Team Selector 2.png" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
-                    <a href="https://VukeFN.github.io/Videos/Clix-Team-Selector.html">
+                    <a href="https://VukeFN.github.io/Videos/Clix_Team_Selector.html">
                         <p class="video-title">How to Make Clix Team Selector</p>
                     </a>
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="../Thumbnails/Clix Loadout Selector 2.png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img loading="lazy" src="../Thumbnails/Clix Loadout Selector 2.png" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make Clix Loadout Selector</p>
@@ -180,7 +181,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="../Thumbnails/How to Make BHE Trolling Room (Part 3).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img loading="lazy" src="../Thumbnails/How to Make BHE Trolling Room (Part 3).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE Trolling Room (Part 3)</p>
@@ -188,7 +189,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="../Thumbnails/Arena Scoreboard in Fortnite.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img loading="lazy" src="../Thumbnails/Arena Scoreboard in Fortnite.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make a Working Arena Scoreboard</p>
@@ -196,7 +197,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="../Thumbnails/Build Reset Remote in Fortnite.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img loading="lazy" src="../Thumbnails/Build Reset Remote in Fortnite.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make Build Reset Remote</p>
@@ -204,7 +205,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="../Thumbnails/Reboot Mechanic.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img loading="lazy" src="../Thumbnails/Reboot Mechanic.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make Reboot Mechanic</p>
@@ -212,7 +213,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="../Thumbnails/1v1 Arena Scoring System in Fortnite.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img loading="lazy" src="../Thumbnails/1v1 Arena Scoring System in Fortnite.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">1v1 Arena Scoring System (Old)</p>
@@ -220,7 +221,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="../Thumbnails/Team Selector Mechanic.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img loading="lazy" src="../Thumbnails/Team Selector Mechanic.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">
@@ -230,7 +231,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="../Thumbnails/How to Make BHE Trolling Room (Part 2).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img loading="lazy" src="../Thumbnails/How to Make BHE Trolling Room (Part 2).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE Trolling Room (Part 2)</p>
@@ -238,7 +239,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="../Thumbnails/How to Make BHE Trolling Room.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img loading="lazy" src="../Thumbnails/How to Make BHE Trolling Room.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE Trolling Room (Part 1)</p>
@@ -246,7 +247,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="../Thumbnails/How to Make Clix Box Fights Map (FULL).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img loading="lazy" src="../Thumbnails/How to Make Clix Box Fights Map (FULL).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make Clix Boxfights Map</p>
@@ -254,7 +255,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="../Thumbnails/BHE Start Island.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img loading="lazy" src="../Thumbnails/BHE Start Island.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE Start Island</p>
@@ -262,7 +263,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="../Thumbnails/BHE Spawn Island (Part 2).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img loading="lazy" src="../Thumbnails/BHE Spawn Island (Part 2).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE Spawn Island (Part 2)</p>
@@ -270,7 +271,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="../Thumbnails/BHE Spawn Island (Part 1).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img loading="lazy" src="../Thumbnails/BHE Spawn Island (Part 1).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE Spawn Island (Part 1)</p>
@@ -278,7 +279,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="../Thumbnails/How to Make BHE Boxfights Map (Part 5).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img loading="lazy" src="../Thumbnails/How to Make BHE Boxfights Map (Part 5).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE Boxfights Map (Part 5)</p>
@@ -286,7 +287,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="../Thumbnails/How to Make BHE Boxfights Map (Part 4).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img loading="lazy" src="../Thumbnails/How to Make BHE Boxfights Map (Part 4).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE Boxfights Map (Part 4)</p>
@@ -294,7 +295,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="../Thumbnails/How to Make First Person Mechanic.png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img loading="lazy" src="../Thumbnails/How to Make First Person Mechanic.png" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">
@@ -304,7 +305,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="../Thumbnails/How to Make BHE Boxfights Map (Part 3).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img loading="lazy" src="../Thumbnails/How to Make BHE Boxfights Map (Part 3).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE Boxfights Map (Part 3)</p>
@@ -312,7 +313,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="../Thumbnails/How to Make BHE Boxfights Map (Part 2).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img loading="lazy" src="../Thumbnails/How to Make BHE Boxfights Map (Part 2).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE Boxfights Map (Part 2)</p>
@@ -320,7 +321,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="../Thumbnails/How to Make BHE Boxfights Map (Part 1).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img loading="lazy" src="../Thumbnails/How to Make BHE Boxfights Map (Part 1).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE Boxfights Map (Part 1)</p>
@@ -328,7 +329,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="../Thumbnails/Emote to Change Loadout.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img loading="lazy" src="../Thumbnails/Emote to Change Loadout.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make Emote to Change Loadout</p>
@@ -336,7 +337,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 7).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img loading="lazy" src="../Thumbnails/How to Make BHE 1v1 Map (Part 7).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE 1v1 Map (Part 7)</p>
@@ -344,7 +345,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 6).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img loading="lazy" src="../Thumbnails/How to Make BHE 1v1 Map (Part 6).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE 1v1 Map (Part 6)</p>
@@ -352,7 +353,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 5).png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img loading="lazy" src="../Thumbnails/How to Make BHE 1v1 Map (Part 5).png" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE 1v1 Map (Part 5)</p>
@@ -360,7 +361,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 4).png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img loading="lazy" src="../Thumbnails/How to Make BHE 1v1 Map (Part 4).png" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE 1v1 Map (Part 4)</p>
@@ -368,7 +369,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 3).png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img loading="lazy" src="../Thumbnails/How to Make BHE 1v1 Map (Part 3).png" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE 1v1 Map (Part 3)</p>
@@ -376,7 +377,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 2).png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img loading="lazy" src="../Thumbnails/How to Make BHE 1v1 Map (Part 2).png" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE 1v1 Map (Part 2)</p>
@@ -384,7 +385,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 1).png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img loading="lazy" src="../Thumbnails/How to Make BHE 1v1 Map (Part 1).png" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE 1v1 Map (Part 1)</p>
