--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./home.css" />
     <link rel="icon" href="./Images/Website Icon.png" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
     <script src="./main.js"></script>
     <title>VukeFN | Videos</title>
 </head>
