bro really (added s)

--- a/Videos/Clix_Team_Selector.html
+++ b/Videos/Clix_Team_Selector.html
@@ -259,7 +259,7 @@
     </main>
 
     <!-- ========== SCRIPTS ========== -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
     <script src="../main.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
